# SOEM

./: .gitignore  CMakeLists.txt
oshw/linux/: oshw.c
test/linux/red_test/: CMakeLists.txt  plot_data.py  realtime_control.c  red_test_orig.c  red_test_speed.c  red_test_torque.c
test/linux/simple_test/: simple_test.c
test/linux/test_position/: CMakeLists.txt  test_position.c  test_position_old.c
test/linux/test_speed/: CMakeLists.txt  test_speed.c
test/linux/test_speed_torque/: CMakeLists.txt  test_speed_torque.c
test/linux/test_torque/: CMakeLists.txt  test_torque.c
